<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AnswerFragment">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/yesNoButtons"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/yesNoButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/yes"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/noButton"
            android:text="@string/no"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/skipButton"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/skip"/>



</androidx.constraintlayout.widget.ConstraintLayout>